css/index.css
/* ... */
.file-selected .logo {
    margin: -.49rem 0;
    height: 3rem;
    width: 22.5rem;
}

header {
    background: rgba(255, 255, 255, .85);
    flex-grow: 0;
    box-shadow: 0 2px 4px 0 rgba(147, 158, 170, .4);
}

header > article {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    padding: 4rem;
    transition: padding .25s;
}

.file-selected header > article {
    padding: 1rem 4rem;
}

header > article,
main {
    width: 100%;
    max-width: 1440px;
    margin: 0 auto;
}

main {
    flex-grow: 1;
    min-height: 0;
    position: relative;
    padding: 2rem;

    border-radius: 5px;
    overflow: hidden;

    display: flex;
    flex-flow: column nowrap;
    align-items: stretch;
}

main::before {
    content: '';
    position: absolute;
    width: calc(100% - 4rem);
    height: calc(100% - 4rem);
    box-shadow: 0 2px 14px rgba(38, 60, 85, .16);
    border-radius: 5px;
    overflow: hidden;
    pointer-events: none;
}

main .loading,
.file-loading main > *:not(.loading) {
    display: none;
}

.file-loading main .loading {
    display: grid;
}

.excel, .loading {
    flex-shrink: 0;
    flex-grow: 0;
    height: 60%;
    background: #fff;
    border-radius: 5px 5px 0 0;
    border: 1px solid rgba(34, 57, 34, .25);
    border-bottom: none;

    position: relative;
    display: grid;
    overflow-y: auto;
}

.excel .header {
    position: sticky;
    top: 0;
    line-height: 2.5rem;
    height: 2.5rem;
    background: #f0f0f0;
    border-bottom: 1px solid #aaa !important;
    box-shadow: 0 0 2px 0 rgba(147, 158, 170, .4);
    font-weight: 500;
}

.excel > * {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    height: calc(1.5rem + 2px);
    padding: 0 5px 2px;
    line-height: 1.5rem;
    font-weight: 300;
    border-style: solid;
    border-color: rgba(90, 141, 238, .15) #eee;
    border-width: 0 0 1px 1px;
    text-decoration: none;
    cursor: pointer;

    user-select: none;
}

.excel .row-odd {
    background: rgba(90, 141, 238, .08);
    border-color: rgba(90, 141, 238, .15);
}

.excel .header.col-odd {
    background: #e5e5e5;
}

.excel .selected {
    background: rgba(255, 188, 136, .05);
    border-color: rgba(128, 92, 48, .3);
}

.excel .selected + * {
    border-left-color: rgba(128, 92, 48, .3);
}

.excel .row-odd.selected {
    background: rgba(255, 188, 136, .25);
}

.excel .col-odd.selected {
    background: rgba(237, 170, 88, .1);
}

.excel .row-odd.col-odd.selected {
    background: rgba(237, 170, 88, .3);
}

.excel .header.selected {
    background: #edd4c0;
}

.excel .header.col-odd.selected {
    background: #e8cdae;
}

.loading,
.excel.blank {
    background: rgba(255, 255, 255, .95);
    height: 100%;
    border-radius: 5px;
    border-bottom: 1px solid rgba(34, 57, 34, .25);
}

.loading > label,
.excel.blank > label {
    margin: 30px;
    height: calc(100% - 60px);
    border: 5px dashed rgba(40, 199, 111, 0);
    display: flex;
    padding: 0;
    align-items: center;

    transition: border-color .25s, margin .25s, height .25s;
}

.excel.blank.dragover > label {
    margin: 20px;
    height: calc(100% - 40px);
    border-color: #28c76f;
}

.loading > label > *,
.excel.blank > label > * {
    text-align: center;
    font-weight: 500;
    flex-grow: 1;
}

.excel ~ .with-selected-cols,
.excel ~ .no-selected-cols {
    display: none;
    padding: 1rem 0;
    overflow: hidden;
}

.excel.no-selections ~ .no-selected-cols,
.excel.has-selections ~ .with-selected-cols {
    display: flex;
}

.no-selected-cols {
    align-items: center;
    padding-top: 3rem;
    font-weight: 400;
    align-content: center;
    justify-content: center;
}

.with-selected-cols {
    flex-flow: row nowrap;
}

.with-selected-cols article {
    width: 50%;
    flex-shrink: 1;
    padding: 0 1rem;
}

.with-selected-cols article:first-child {
    border-right: 1px solid rgba(34, 57, 34, .25);
}

.with-selected-cols strong {
    font-weight: 600;
}

main > aside {
    flex-grow: 1;
    flex-shrink: 1;
    background-color: #e4f8e4;
    border-radius: 0 0 5px 5px;
    border: 1px solid rgba(34, 57, 34, .2);
}

footer {
    height: 3rem;
    flex-grow: 0;
    flex-shrink: 0;
    position: relative;
}

header label {
    font-weight: 600;
}

.actions {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 1rem;
}

#reset {
    padding: .3rem 1.5rem .4rem;
    border-radius: 3px;
    text-align: center;
    cursor: pointer;
    color: #fdac41;
    border: 1px solid #fdac41;
    background: transparent;
}

#reset:hover {
    color: #ff9f11;
    background: #fff2e1;
}

#reset,
#download {
    display: none;
}

.file-selected #reset,
.file-selected #download {
    display: block;
}

#selectedCols {
    margin: 0;
    padding: .5rem 1.5rem;
    height: calc(100% - 2rem);
    overflow: auto;

    display: flex;
    flex-flow: column wrap;
    justify-content: flex-start;
}

#selectedCols a {
    display: block;
}

#clear-cols {
    padding: .15rem .5rem .2rem;
    border-radius: 3px;
    text-align: center;
    cursor: pointer;
    color: #c67509;
    border: 1px solid #c67509;
    background: transparent;
    font-size: .9rem;
    float: right;
    margin-right: 1rem;
}

#clear-cols:hover {
    color: #da8100;
    background: #fff2e1;
}

#apply-transformation {
    padding: .15rem .5rem .2rem;
    border-radius: 3px;
    text-align: center;
    cursor: pointer;
    color: #148346;
    border: 1px solid #148346;
    background: transparent;
    font-size: .9rem;
    float: right;
    margin-right: 1rem;
}

#apply-transformation:hover {
    color: #016e32;
    background: #d9ffec;
}

#transformations {
    margin: 0;
    padding: .5rem 1.5rem;
    height: calc(100% - 2rem);
    overflow: auto;
    clear: both;

    display: flex;
    flex-flow: column wrap;
    justify-content: flex-start;
    gap: .25rem 3rem;
}

#transformations > div {
    min-width: 25%;
}
/* ... */

